<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/select_video_quality"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/quality_1080p"
            android:layout_marginTop="15dp"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/quality_1080p"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/quality_720p"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/quality_720p"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quality_1080p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/quality_540p"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/quality_540p"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quality_720p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/quality_480p"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:text="@string/quality_480p"
            style="@style/Widget.MaterialComponents.Button"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quality_540p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>